Update readme with execution details